// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createCurrencyFormat de-DE custom 1`] = `
Object {
  "decimalLength": 2,
  "decimalSymbol": ",",
  "groupingSymbol": ".",
  "negativePrefix": "-₿ ",
  "prefix": "₿ ",
  "suffix": "",
}
`;

exports[`createCurrencyFormat de-DE custom 2`] = `
Object {
  "decimalLength": 2,
  "decimalSymbol": ",",
  "groupingSymbol": ".",
  "negativePrefix": "-",
  "prefix": "",
  "suffix": " Euro",
}
`;

exports[`createCurrencyFormat de-DE decimal 1`] = `
Object {
  "decimalLength": 2,
  "decimalSymbol": ",",
  "groupingSymbol": ".",
  "negativePrefix": "-",
  "prefix": "",
  "suffix": "",
}
`;

exports[`createCurrencyFormat de-DE_EUR 1`] = `
Object {
  "decimalLength": 2,
  "decimalSymbol": ",",
  "groupingSymbol": ".",
  "negativePrefix": "-",
  "prefix": "",
  "suffix": " €",
}
`;

exports[`createCurrencyFormat en-GB_GBP 1`] = `
Object {
  "decimalLength": 2,
  "decimalSymbol": ".",
  "groupingSymbol": ",",
  "negativePrefix": "-£",
  "prefix": "£",
  "suffix": "",
}
`;

exports[`createCurrencyFormat en-IN_INR 1`] = `
Object {
  "decimalLength": 2,
  "decimalSymbol": ".",
  "groupingSymbol": ",",
  "negativePrefix": "-₹",
  "prefix": "₹",
  "suffix": "",
}
`;

exports[`createCurrencyFormat en-US_USD 1`] = `
Object {
  "decimalLength": 2,
  "decimalSymbol": ".",
  "groupingSymbol": ",",
  "negativePrefix": "-$",
  "prefix": "$",
  "suffix": "",
}
`;

exports[`createCurrencyFormat es-ES_EUR 1`] = `
Object {
  "decimalLength": 2,
  "decimalSymbol": ",",
  "groupingSymbol": ".",
  "negativePrefix": "-",
  "prefix": "",
  "suffix": " €",
}
`;

exports[`createCurrencyFormat ja_JPY 1`] = `
Object {
  "decimalLength": 0,
  "decimalSymbol": null,
  "groupingSymbol": ",",
  "negativePrefix": "-￥",
  "prefix": "￥",
  "suffix": "",
}
`;

exports[`createCurrencyFormat nl-NL_EUR 1`] = `
Object {
  "decimalLength": 2,
  "decimalSymbol": ",",
  "groupingSymbol": ".",
  "negativePrefix": "€ -",
  "prefix": "€ ",
  "suffix": "",
}
`;

exports[`createCurrencyFormat pt_BRL 1`] = `
Object {
  "decimalLength": 2,
  "decimalSymbol": ",",
  "groupingSymbol": ".",
  "negativePrefix": "-R$",
  "prefix": "R$",
  "suffix": "",
}
`;

exports[`createCurrencyFormat zh_CNY 1`] = `
Object {
  "decimalLength": 2,
  "decimalSymbol": ".",
  "groupingSymbol": ",",
  "negativePrefix": "-￥",
  "prefix": "￥",
  "suffix": "",
}
`;
